--- a/resources/assets/styles/media-queries/_all.scss
+++ b/resources/assets/styles/media-queries/_all.scss
@@ -6,6 +6,10 @@
 
 @media only screen and (min-width : 320px) {
 
+  header nav ul li .dropdown-menu {
+    border: none;
+    border-radius: 0;
+  }
 }
 
 @media only screen and (min-width : 480px) {
@@ -14,6 +18,27 @@
 
 @media only screen and (min-width : 768px) {
 
+  header nav ul li {
+    /* dropdown menus */
+
+    &.dropdown:hover > .dropdown-menu {
+      display: block;
+    }
+    .dropdown-menu {
+      background-color: theme-color("primary");
+      //border: none;
+      //border-radius: 0;
+      //margin-top: 12px;
+      padding: 0;
+      a {
+        border-top: 1px solid #15505e;
+        color: theme-color("teal-color");
+        &:first-child { border-top: none; }
+        &:hover { background-color: #15505e; }
+      }
+
+    }
+  }
 }
 
 @media only screen and (min-width : 992px) {
