--- a/resources/assets/styles/media-queries/_md.scss
+++ b/resources/assets/styles/media-queries/_md.scss
@@ -4,3 +4,10 @@
 @media only screen and (min-width : 768px) and (max-width : 991px) {
 
 }
+
+@media only screen and (max-width : 768px) {
+
+  header nav ul li .dropdown-menu {
+    display: block;
+  }
+}
